# market-risk-platform

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
.claude/kb/: DATABASE_SCHEMA.md  IMPORT_SCHEMA.md  INSTALL.md  RISK_METHODOLOGY.md
.claude/skills/: README.md
.github/workflows/: ci.yml  price_update.yml  prod-deploy.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cc77bf6eb68_baseline_schema_created_via_supabase_.py
backend/app/: main.py
backend/app/api/v1/: basis.py  cbot.py  fx.py  imports.py  physical.py  reports.py  risk.py  scenarios.py
backend/app/core/: config.py  db.py  logging.py  security.py  sentry.py
backend/app/middleware/: rate_limit.py  request_log.py
backend/app/models/: __init__.py  base.py  basis.py  cbot.py  config.py  enums.py  events.py  fx.py  physical.py  prices.py
backend/app/risk/: attribution.py  correlation.py  cvar.py  exposure.py  mc.py  pricing.py  returns.py  stress.py  types.py  var.py
backend/app/risk/options/: barrier.py  binomial.py  bsm.py  greeks.py
backend/app/schemas/: __init__.py  basis.py  cbot.py  common.py  config.py  events.py  fx.py  physical.py  prices.py
backend/app/services/: events.py  imports.py  price_ingestion.py  status_recompute.py
backend/scripts/: db_smoke.py  diag_jwt.py  fetch_prices.py  generate_import_template.py  smoke_prod.py  smoke_risk.py
backend/tests/: conftest.py  test_health.py
backend/tests/fixtures/: price_history.py
backend/tests/integration/: test_positions_crud.py  test_price_ingestion.py
backend/tests/unit/: test_models.py
backend/tests/unit/risk/: test_attribution.py  test_correlation.py  test_cvar.py  test_exposure.py  test_mc.py  test_pricing.py  test_returns.py  test_stress.py  test_var.py
backend/tests/unit/risk/options/: test_barrier.py  test_binomial.py  test_bsm.py  test_greeks.py
docs/: BUILD_PLAN.md  DEPLOY.md  OBSERVABILITY.md  example_import.xlsx
docs/adr/: 0000-index.md  0001-instrument-model.md  0002-fixacao-model.md  0003-risk-aggregation.md
docs/phase-prompts/: README.md  phase-01-scaffold.md  phase-02-backend-models.md  phase-03-domain-core.md  phase-04-price-ingestion.md  phase-05-positions-crud.md  phase-06-risk-engine.md  phase-07-mc-correlation-attribution.md  phase-08-options-pricing.md  phase-09-frontend-scaffold.md  (+4 more)
frontend/: .env.example  .prettierignore  eslint.config.mjs  middleware.ts  package.json  pnpm-lock.yaml
infra/: docker-compose.yml
(+50 files in other folders)
