[project]
name = "market-risk-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the market-risk-platform."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "numpy>=2",
    "scipy>=1.13",
    "yfinance>=0.2",
    "httpx>=0.27",
    "uvicorn[standard]>=0.44.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-mock>=3.14",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "types-python-jose",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# FastAPI idiom uses Depends/Query/File in default argument position.
"app/api/**/*.py" = ["B008"]
# Risk module docstrings use σ/α/φ/Σ; keep them for math clarity.
# UP040 (TypeAlias) kept for pre-commit mypy compatibility (pinned < PEP 695).
"app/risk/*.py" = ["RUF002", "RUF003", "UP040"]
"tests/unit/risk/*.py" = ["RUF002", "RUF003"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = ["app"]
exclude = ["^migrations/"]

[[tool.mypy.overrides]]
module = [
    "yfinance",
    "yfinance.*",
    "scipy",
    "scipy.*",
    "passlib",
    "passlib.*",
    "openpyxl",
    "openpyxl.*",
    "httpx",
    "httpx.*",
    "pandas",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across the whole test session so module-level async
# resources (SQLAlchemy engines, asyncpg connection pool) stay bound to the
# same loop for the lifetime of the run.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# Coverage is opt-in per-invocation (scoped via --cov on the command line).
# The global floor below only bites when a --cov target is supplied.
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 95
show_missing = true
